correct align on table-rows

--- a/css/sass/components/_tables-rows.scss
+++ b/css/sass/components/_tables-rows.scss
@@ -9,12 +9,12 @@
   margin-top: 20px;
   & th {
     padding: 5px 10px 5px 10px;
-    text-align: left;
+    text-align: center;
     background-color: $color1;
   }
   & td {
     padding: 5px 20px 5px 20px;
-    text-align: right;
+    text-align: center;
   }
 
   & tr:nth-child(odd) {
