--- a/css/styles.css
+++ b/css/styles.css
@@ -190,12 +190,12 @@ a {
 }
 .table-rows th {
   padding: 5px 10px 5px 10px;
-  text-align: left;
+  text-align: center;
   background-color: #303030;
 }
 .table-rows td {
   padding: 5px 20px 5px 20px;
-  text-align: right;
+  text-align: center;
 }
 .table-rows tr:nth-child(odd) {
   background-color: #535353;
